--- a/index.html
+++ b/index.html
@@ -4,10 +4,104 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CRAZY SLIDER</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <h1>Hassan</h1>
+    <header>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">Contacts</a>
+        <a href="#">Info</a>
+      </nav>
+    </header>
+    <!-- carousel -->
+    <div class="carousel">
+      <!-- List of items -->
+      <div class="list">
+        <div class="item">
+          <img src="assets/img1.jpg" alt="Image-One" />
+          <div class="content">
+            <div class="author">CODE WITH HASSAN</div>
+            <div class="title">DESIGN SLIDER</div>
+            <div class="topic">ANIMAL</div>
+            <div class="desc">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste ab,
+              blanditiis assumenda molestiae, nobis quasi aut deserunt provident
+              eius rerum saepe. Neque illum amet ratione voluptatibus expedita
+              quas voluptates dolores.
+            </div>
+            <div class="buttons">
+              <button>SEE MORE</button>
+              <button>SUBSCRIBE</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="item">
+          <img src="assets/img2.jpg" alt="Image-One" />
+          <div class="content">
+            <div class="author">CODE WITH HASSAN</div>
+            <div class="title">DESIGN SLIDER</div>
+            <div class="topic">ANIMAL</div>
+            <div class="desc">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste ab,
+              blanditiis assumenda molestiae, nobis quasi aut deserunt provident
+              eius rerum saepe. Neque illum amet ratione voluptatibus expedita
+              quas voluptates dolores.
+            </div>
+            <div class="buttons">
+              <button>SEE MORE</button>
+              <button>SUBSCRIBE</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="item">
+          <img src="assets/img3.jpg" alt="Image-One" />
+          <div class="content">
+            <div class="author">CODE WITH HASSAN</div>
+            <div class="title">DESIGN SLIDER</div>
+            <div class="topic">ANIMAL</div>
+            <div class="desc">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste ab,
+              blanditiis assumenda molestiae, nobis quasi aut deserunt provident
+              eius rerum saepe. Neque illum amet ratione voluptatibus expedita
+              quas voluptates dolores.
+            </div>
+            <div class="buttons">
+              <button>SEE MORE</button>
+              <button>SUBSCRIBE</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="item">
+          <img src="assets/img4.jpg" alt="Image-One" />
+          <div class="content">
+            <div class="author">CODE WITH HASSAN</div>
+            <div class="title">DESIGN SLIDER</div>
+            <div class="topic">ANIMAL</div>
+            <div class="desc">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste ab,
+              blanditiis assumenda molestiae, nobis quasi aut deserunt provident
+              eius rerum saepe. Neque illum amet ratione voluptatibus expedita
+              quas voluptates dolores.
+            </div>
+            <div class="buttons">
+              <button>SEE MORE</button>
+              <button>SUBSCRIBE</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="index.js"></script>
   </body>
 </html>
