--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="item">
           <img src="assets/img1.jpg" alt="Image-One" />
           <div class="content">
-            <div class="author">CODE WITH HASSAN</div>
+            <div class="author">HASSAN TECH</div>
             <div class="title">DESIGN SLIDER</div>
             <div class="topic">ANIMAL</div>
             <div class="desc">
@@ -46,7 +46,7 @@
         <div class="item">
           <img src="assets/img2.jpg" alt="Image-One" />
           <div class="content">
-            <div class="author">CODE WITH HASSAN</div>
+            <div class="author">HASSAN TECH</div>
             <div class="title">DESIGN SLIDER</div>
             <div class="topic">ANIMAL</div>
             <div class="desc">
@@ -65,7 +65,7 @@
         <div class="item">
           <img src="assets/img3.jpg" alt="Image-One" />
           <div class="content">
-            <div class="author">CODE WITH HASSAN</div>
+            <div class="author">HASSAN TECH</div>
             <div class="title">DESIGN SLIDER</div>
             <div class="topic">ANIMAL</div>
             <div class="desc">
@@ -84,7 +84,7 @@
         <div class="item">
           <img src="assets/img4.jpg" alt="Image-One" />
           <div class="content">
-            <div class="author">CODE WITH HASSAN</div>
+            <div class="author">HASSAN TECH</div>
             <div class="title">DESIGN SLIDER</div>
             <div class="topic">ANIMAL</div>
             <div class="desc">
@@ -97,6 +97,42 @@
               <button>SEE MORE</button>
               <button>SUBSCRIBE</button>
             </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Thumbnail-->
+
+      <div class="thumbnail">
+        <div class="item">
+          <img src="assets/img1.jpg" alt="Image-One" />
+          <div class="content">
+            <div class="title">Name Slider</div>
+            <div class="desc">Description</div>
+          </div>
+        </div>
+
+        <div class="item">
+          <img src="assets/img2.jpg" alt="Image-One" />
+          <div class="content">
+            <div class="title">Name Slider</div>
+            <div class="desc">Description</div>
+          </div>
+        </div>
+
+        <div class="item">
+          <img src="assets/img3.jpg" alt="Image-One" />
+          <div class="content">
+            <div class="title">Name Slider</div>
+            <div class="desc">Description</div>
+          </div>
+        </div>
+
+        <div class="item">
+          <img src="assets/img4.jpg" alt="Image-One" />
+          <div class="content">
+            <div class="title">Name Slider</div>
+            <div class="desc">Description</div>
           </div>
         </div>
       </div>
