--- a/index.html
+++ b/index.html
@@ -105,14 +105,6 @@
 
       <div class="thumbnail">
         <div class="item">
-          <img src="assets/img1.jpg" alt="Image-One" />
-          <div class="content">
-            <div class="title">Name Slider</div>
-            <div class="desc">Description</div>
-          </div>
-        </div>
-
-        <div class="item">
           <img src="assets/img2.jpg" alt="Image-One" />
           <div class="content">
             <div class="title">Name Slider</div>
@@ -135,7 +127,21 @@
             <div class="desc">Description</div>
           </div>
         </div>
+
+        <div class="item">
+          <img src="assets/img1.jpg" alt="Image-One" />
+          <div class="content">
+            <div class="title">Name Slider</div>
+            <div class="desc">Description</div>
+          </div>
+        </div>
+        <!-- Arrows -->
       </div>
+      <div class="arrows">
+        <button id="prev">&lt;</button>
+        <button id="next">&gt;</button>
+      </div>
+      <div class="time"></div>
     </div>
 
     <script src="index.js"></script>
