--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <!-- List of items -->
       <div class="list">
         <div class="item">
-          <img src="assets/img1.jpg" alt="Image-One" />
+          <img src="https://i.ibb.co/jMgRh8N/img1.jpg" alt="img1" />
           <div class="content">
             <div class="author">HASSAN TECH</div>
             <div class="title">DESIGN SLIDER</div>
@@ -44,7 +44,7 @@
         </div>
 
         <div class="item">
-          <img src="assets/img2.jpg" alt="Image-One" />
+          <img src="https://i.ibb.co/TKsV8Yf/img3.jpg" alt="img3" />
           <div class="content">
             <div class="author">HASSAN TECH</div>
             <div class="title">DESIGN SLIDER</div>
@@ -63,7 +63,7 @@
         </div>
 
         <div class="item">
-          <img src="assets/img3.jpg" alt="Image-One" />
+          <img src="https://i.ibb.co/qdgd9TV/img2.jpg" alt="img2" />
           <div class="content">
             <div class="author">HASSAN TECH</div>
             <div class="title">DESIGN SLIDER</div>
@@ -82,7 +82,7 @@
         </div>
 
         <div class="item">
-          <img src="assets/img4.jpg" alt="Image-One" />
+          <img src="https://i.ibb.co/Wpsk70X/img4.jpg" alt="img4" />
           <div class="content">
             <div class="author">HASSAN TECH</div>
             <div class="title">DESIGN SLIDER</div>
@@ -105,7 +105,7 @@
 
       <div class="thumbnail">
         <div class="item">
-          <img src="assets/img2.jpg" alt="Image-One" />
+          <img src="https://i.ibb.co/jMgRh8N/img1.jpg" alt="img1" />
           <div class="content">
             <div class="title">Name Slider</div>
             <div class="desc">Description</div>
@@ -113,7 +113,7 @@
         </div>
 
         <div class="item">
-          <img src="assets/img3.jpg" alt="Image-One" />
+          <img src="https://i.ibb.co/TKsV8Yf/img3.jpg" alt="img3" />
           <div class="content">
             <div class="title">Name Slider</div>
             <div class="desc">Description</div>
@@ -121,7 +121,7 @@
         </div>
 
         <div class="item">
-          <img src="assets/img4.jpg" alt="Image-One" />
+          <img src="https://i.ibb.co/qdgd9TV/img2.jpg" alt="img2" />
           <div class="content">
             <div class="title">Name Slider</div>
             <div class="desc">Description</div>
@@ -129,7 +129,7 @@
         </div>
 
         <div class="item">
-          <img src="assets/img1.jpg" alt="Image-One" />
+          <img src="https://i.ibb.co/Wpsk70X/img4.jpg" alt="img4" />
           <div class="content">
             <div class="title">Name Slider</div>
             <div class="desc">Description</div>
