--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="item">
           <img src="https://i.ibb.co/jMgRh8N/img1.jpg" alt="img1" />
           <div class="content">
-            <div class="title">Name Slider</div>
+            <div class="title">Slider Name</div>
             <div class="desc">Description</div>
           </div>
         </div>
@@ -115,7 +115,7 @@
         <div class="item">
           <img src="https://i.ibb.co/TKsV8Yf/img3.jpg" alt="img3" />
           <div class="content">
-            <div class="title">Name Slider</div>
+            <div class="title">Slider Name</div>
             <div class="desc">Description</div>
           </div>
         </div>
@@ -123,7 +123,7 @@
         <div class="item">
           <img src="https://i.ibb.co/qdgd9TV/img2.jpg" alt="img2" />
           <div class="content">
-            <div class="title">Name Slider</div>
+            <div class="title">Slider Name</div>
             <div class="desc">Description</div>
           </div>
         </div>
@@ -131,7 +131,7 @@
         <div class="item">
           <img src="https://i.ibb.co/Wpsk70X/img4.jpg" alt="img4" />
           <div class="content">
-            <div class="title">Name Slider</div>
+            <div class="title">Slider Name</div>
             <div class="desc">Description</div>
           </div>
         </div>
