--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       <!-- List of items -->
       <div class="list">
         <div class="item">
-          <img src="https://i.ibb.co/jMgRh8N/img1.jpg" alt="img1" />
+          <!-- <img src="https://i.ibb.co/jMgRh8N/img1.jpg" alt="img1" /> -->
+          <img src="https://i.ibb.co/D7STVyT/cute-dog.jpg" alt="cute-dog" />
           <div class="content">
             <div class="author">HASSAN TECH</div>
             <div class="title">DESIGN SLIDER</div>
@@ -105,7 +106,8 @@
 
       <div class="thumbnail">
         <div class="item">
-          <img src="https://i.ibb.co/jMgRh8N/img1.jpg" alt="img1" />
+          <!-- <img src="https://i.ibb.co/jMgRh8N/img1.jpg" alt="img1" /> -->
+          <img src="https://i.ibb.co/D7STVyT/cute-dog.jpg" alt="cute-dog" />
           <div class="content">
             <div class="title">Slider Name</div>
             <div class="desc">Description</div>
