--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
       <!-- List of items -->
       <div class="list">
         <div class="item">
-          <!-- <img src="https://i.ibb.co/jMgRh8N/img1.jpg" alt="img1" /> -->
-          <img src="https://i.ibb.co/D7STVyT/cute-dog.jpg" alt="cute-dog" />
+          <img
+            src="https://i.ibb.co/D7STVyT/cute-dog.jpg"
+            loading="lazy"
+            class="lazy-load"
+            alt="cute-dog"
+          />
           <div class="content">
             <div class="author">HASSAN TECH</div>
             <div class="title">DESIGN SLIDER</div>
@@ -45,7 +49,12 @@
         </div>
 
         <div class="item">
-          <img src="https://i.ibb.co/TKsV8Yf/img3.jpg" alt="img3" />
+          <img
+            src="https://i.ibb.co/TKsV8Yf/img3.jpg"
+            loading="lazy"
+            class="lazy-load"
+            alt="img3"
+          />
           <div class="content">
             <div class="author">HASSAN TECH</div>
             <div class="title">DESIGN SLIDER</div>
@@ -64,7 +73,12 @@
         </div>
 
         <div class="item">
-          <img src="https://i.ibb.co/qdgd9TV/img2.jpg" alt="img2" />
+          <img
+            src="https://i.ibb.co/qdgd9TV/img2.jpg"
+            loading="lazy"
+            class="lazy-load"
+            alt="img2"
+          />
           <div class="content">
             <div class="author">HASSAN TECH</div>
             <div class="title">DESIGN SLIDER</div>
@@ -83,7 +97,12 @@
         </div>
 
         <div class="item">
-          <img src="https://i.ibb.co/Wpsk70X/img4.jpg" alt="img4" />
+          <img
+            src="https://i.ibb.co/Wpsk70X/img4.jpg"
+            loading="lazy"
+            class="lazy-load"
+            alt="img4"
+          />
           <div class="content">
             <div class="author">HASSAN TECH</div>
             <div class="title">DESIGN SLIDER</div>
@@ -106,8 +125,12 @@
 
       <div class="thumbnail">
         <div class="item">
-          <!-- <img src="https://i.ibb.co/jMgRh8N/img1.jpg" alt="img1" /> -->
-          <img src="https://i.ibb.co/D7STVyT/cute-dog.jpg" alt="cute-dog" />
+          <img
+            src="https://i.ibb.co/D7STVyT/cute-dog.jpg"
+            loading="lazy"
+            class="lazy-load"
+            alt="cute-dog"
+          />
           <div class="content">
             <div class="title">Slider Name</div>
             <div class="desc">Description</div>
@@ -115,7 +138,12 @@
         </div>
 
         <div class="item">
-          <img src="https://i.ibb.co/TKsV8Yf/img3.jpg" alt="img3" />
+          <img
+            src="https://i.ibb.co/TKsV8Yf/img3.jpg"
+            loading="lazy"
+            class="lazy-load"
+            alt="img3"
+          />
           <div class="content">
             <div class="title">Slider Name</div>
             <div class="desc">Description</div>
@@ -123,7 +151,12 @@
         </div>
 
         <div class="item">
-          <img src="https://i.ibb.co/qdgd9TV/img2.jpg" alt="img2" />
+          <img
+            src="https://i.ibb.co/qdgd9TV/img2.jpg"
+            loading="lazy"
+            class="lazy-load"
+            alt="img2"
+          />
           <div class="content">
             <div class="title">Slider Name</div>
             <div class="desc">Description</div>
@@ -131,7 +164,12 @@
         </div>
 
         <div class="item">
-          <img src="https://i.ibb.co/Wpsk70X/img4.jpg" alt="img4" />
+          <img
+            src="https://i.ibb.co/Wpsk70X/img4.jpg"
+            loading="lazy"
+            class="lazy-load"
+            alt="img4"
+          />
           <div class="content">
             <div class="title">Slider Name</div>
             <div class="desc">Description</div>
@@ -145,7 +183,6 @@
       </div>
       <div class="time"></div>
     </div>
-
-    <script src="index.js"></script>
   </body>
+  <script src="index.js"></script>
 </html>
